--- a/data/components/18F/AU-Policy/component.yaml
+++ b/data/components/18F/AU-Policy/component.yaml
@@ -31,14 +31,26 @@ satisfies:
       - verification: POLICY_DOC
     AU-6:
       implementation_status: null
-      narrative: |
-        Audit Monitoring, Analysis and Reporting
-         * 18F establishes processes for regularly reviewing audit log information, and reporting security issues if discovered. Reviews will occur at a minimum of weekly. These processes should be integrated with processes for incident response, in order to ensure standardization and cross-functional collaboration
-         * 18F employs automated mechanisms to integrate audit monitoring, analysis and reporting into an overall process for investigation and response to suspicious activities.
-         * 18F employs automated mechanisms to immediately alert security personnel of inappropriate or unusual activities that have security implications.
-        Upon implementation, 18F will monitor information security news and alerts for indications of a need to heighten information system security monitoring. Sources such as product vendors, United States Computer Emergency Readiness Team (US-CERT) and other security community resources will be leveraged to provide information on emerging threats and changes to the landscape.  At GSA’s request or the determination of 18F the review of audit logs shall be increased and any appropriate changes to audit content collection shall be implemented.
-        Findings & Incident Reports will be sent weekly for findings, and monthly for incidents. All incidents involving data breaches which could result in identity theft are coordinated through the GSA OCIO Office of the Senior Agency Information Security Officer (OSAISO) and the GSA Management Incident Response Team (MIRT) using the GSA breach notification plan per OMB Memorandum M-07-16, “Safeguarding Against and Responding to the Breach of Personally Identifiable Information;”
-        Upon request from the appropriate personnel, Reports, Logs,  Auditable Events, and other Data will be provided via secure means such as encrypted email, encrypted file transfer, or other such supported media, depending on the size of data requested.
+      narrative:
+        a: |
+          AWS Auditable Events:
+          DevOps and SecOps teams will conduct weekly manual and automated continuous audits of authorized accounts and configurations. These audits will include but are not limited to:
+          Administrative Accounts
+          * Virtual Private Cloud (VPC)
+          * Elastic Compute Cloud (EC2)
+          * Simple Storage Service (S3)
+          * Identity and Access Management (IAM)
+          * Elastic Block Store (EBS)
+
+
+          Cloud Foundry Auditable Events:
+          By default, Loggregator streams logs to a terminal. 18F will drain logs to a third-party log management service such as ELK and AWS CloudTrail
+          Cloud Foundry logs are captured in multiple tables and log files. These will be reviewed weekly and if discovery of anomalous audit log content which appears to indicate a breach are handled according to the GSA Security Incident Handling Guide: CIO IT Security 01-02 Revision 7 (August 18, 2009) requirements.
+
+        b: |
+          When a credible source to the GSA Agency provides information that causes reason to enhance audit activities, develop and implement an enhanced auditing use-case that will adequately enhance auditing practices in a fashion necessary per the identified threat and following the Incident Reporting Procedures in GSA IT Security Procedural Guide 01-02 (04/07/2015), Incident Response. The GSA Agency may also, through analysis pertaining to the GSA Agency environment provide additional audit measures that will require an increase in review, analysis, and reporting for a necessary.
+          Upon implementation, 18F will monitor information security news and alerts for indications of a need to heighten information system security monitoring.
+
       references:
         - verification: POLICY_DOC
     AU-6 (1):
@@ -58,7 +70,7 @@ satisfies:
          * 18F employs automated mechanisms to immediately alert security personnel of inappropriate or unusual activities that have security implications.
 
       references:
-        - verification: POLICY_DOC   
+        - verification: POLICY_DOC
     AU-9:
       implementation_status: null
       narrative: |
