--- a/data/components/AWS/CloudFormation/component.yaml
+++ b/data/components/AWS/CloudFormation/component.yaml
@@ -8,20 +8,12 @@ satisfies:
   NIST-800-53:
     CM-2:
       implementation_status: null
-      narrative: '* DevOps maintain baseline configurations for VPC, EBS, EC2 instances
-        and AMIs. AWS Cloud Formation templates help 18F maintain a strict configuration
-        management scheme of the cloud infrastructure. If an error or misconfiguration
-        of the infrastructure or associated security mechanism (security groups, NACLs)
-        is detected, the administrators can analyze the current infrastructure templates;
-        compare with previous versions, and redeploy the configurations to a known
-        and approved state.
+      narrative: |
+        DevOps maintain baseline configurations for VPC, EBS, EC2 instances and AMIs. AWS Cloud Formation templates help 18F maintain a strict configuration management scheme of the cloud infrastructure. If an error or misconfiguration of the infrastructure or associated security mechanism (security groups, NACLs) is detected, the administrators can analyze the current infrastructure templates; compare with previous versions, and redeploy the configurations to a known and approved state.
+        AWS Cloud Formation templates are the approved baseline for all changes to the infrastructure and simplify provisioning and management on AWS. They provide an automated method to assess the status of an operational infrastructure against an approved baseline.
+        Linux instances are based on the standard AWS AMI images with configuration to GSA requirements based on secure configurations documented in CM-6.
+        DevOps maintain copies of the latest Production Software Baseline, which includes the following elements: Manufacturer, Type, Version number, Software, Databases, and Stats.
 
-        - AWS Cloud Formation templates are the approved baseline for all changes
-        to the infrastructure and simplify provisioning and management on AWS. They
-        provide an automated method to assess the status of an operational infrastructure
-        against an approved baseline.
-
-        '
     CM-3:
       implementation_status: null
       narrative: '- 18F provisions its infrastructure with AWS CloudFormation, the
