--- a/data/components/CloudFoundry/UAA/component.yaml
+++ b/data/components/CloudFoundry/UAA/component.yaml
@@ -16,6 +16,17 @@ references:
 - name: Cloud Foundry Space Access
   path: https://github.com/cloudfoundry/cloud_controller_ng/blob/master/spec/unit/access/space_access_spec.rb
   type: URL
+verifications:
+  ACCOUNT_LOCKOUT:
+    last_run: 2016-01-26 10:41:30.033023
+    name: Access Controls Account Lockout (AC-7)
+    path: 'Feature: Access Controls Scenario: Account Lockout (AC-7)'
+    test_passed: true
+    type: TEST
+  CLOUDGOV_LOGIN_PAGE:
+    name: Cloud.gov Login Page
+    path: https://login.cloud.gov/login
+    type: URL
 satisfies:
   NIST-800-53:
     AC-10:
@@ -215,17 +226,32 @@ satisfies:
         '
     IA-3:
       implementation_status: null
-      narrative: 'Not Applicable to Cloud Foundry
+      narrative: |
+        Not Applicable to Cloud Foundry
 
-        '
-verifications:
-  ACCOUNT_LOCKOUT:
-    last_run: 2016-01-26 10:41:30.033023
-    name: Access Controls Account Lockout (AC-7)
-    path: 'Feature: Access Controls Scenario: Account Lockout (AC-7)'
-    test_passed: true
-    type: TEST
-  CLOUDGOV_LOGIN_PAGE:
-    name: Cloud.gov Login Page
-    path: https://login.cloud.gov/login
-    type: URL
+    SC-13:
+      implementation_status: null
+      narrative: |
+        As for stored data the following cryptographic mechanisms are used to prevent unauthorized disclosure and modification of stored data.
+        Operators configure encryption of the identity store in the UAA. When users register an account with the Cloud Foundry platform, the UAA acts as the user store and stores user passwords in the UAA database using bcrypt, a blowfish encryption algorithm, which enables Cloud Foundry to store a secure hash of user passwords.
+        The Cloud Controller stores the configuration for an application in an encrypted database table. This configuration data includes user-specified environment variables and service credentials for any services bound to the app.
+
+    SC-28 (1):
+      implementation_status: null
+      narrative: |
+
+        The Cloud Foundry platform as a service does NOT create, store or process any personally identifiable information (PII) or sensitive information as identified by parameter requirement 1.
+
+        Applications running on Cloud Foundry receive requests through the URLs configured for the application. HTTP requests arrive on ports 80 and 443. Additionally, Cloud Foundry requires a channel for TCP/WebSocket traffic. The default cf-release manifest assigns port: 4443 for TCP/WebSocket communications.
+        All traffic from the public internet to the Cloud Controller and UAA happens over HTTPS. Inside the boundary of the system, components communicate over a publish-subscribe (pub-sub) port: 4222 message bus, NATs
+
+        For stored data identified by parameter 2, the following cryptographic mechanisms are used to prevent unauthorized disclosure and modification of stored data.
+        Operators configure encryption of the identity store in the UAA. When users register an account with the Cloud Foundry platform, the UAA, acts as the user store and stores user passwords in the UAA database using bcrypt. Bcrypt is a blowfish encryption algorithm, which enables cloud foundry to store a secure hash of your users' passwords.
+        The Cloud Controller stores the configuration for an application in an encrypted database table. This configuration data includes user-specified environment variables and service credentials for any services bound to the app.
+        Application developers push their code using the Cloud Foundry API. Cloud Foundry secures each call to the CF API using the UAA and SSL
+        To combat spoofing Cloud Foundry network traffic rules help prevents the attack from accessing application containers. Cloud Foundry uses application isolation, operating system restrictions, and encrypted connections to further mitigate risk.
+
+    SI-10:
+      implementation_status: implemented
+      narrative: |
+        The UAA uses an api with set endpoint and parameters. Users depending on thier authorized access can only make request to specific endpoint that activate specific functions that take a limited and defined set of parameters.
