--- a/data/components/CloudFoundry/ApplicationSecurityGroups/component.yaml
+++ b/data/components/CloudFoundry/ApplicationSecurityGroups/component.yaml
@@ -52,14 +52,14 @@ satisfies:
         '
 verifications:
   ASG_LIST:
-    last_run: 2016-01-25 11:24:11.277888
+    last_run: 2016-01-26 10:41:36.009750
     name: Access Control Flow View Application Security Groups
     path: 'Feature: Access Control Flow Scenario: View Application Security Groups'
     test_passed: true
     type: TEST
   ASG_OPEN_AND_CLOSED:
-    last_run: 2016-01-25 11:25:18.612095
+    last_run: 2016-01-26 10:41:38.391335
     name: Access Control Flow all
     path: 'Feature: Access Control Flow Scenario: all'
-    test_passed: false
+    test_passed: true
     type: TEST
