--- a/data/components/AWS/VPC/component.yaml
+++ b/data/components/AWS/VPC/component.yaml
@@ -21,3 +21,16 @@ satisfies:
       implementation_status: null
       narrative: |
         Since the Cloud.Gov platform resides within the 18F virtual infrastructure, 18F Devops must use the SSH remote access method to troubleshoot issues and update services that are only resolved by logging into the Cloud.Gov jumpboxes. The jumpboxes themselves are virtual machine deployed within the 18F’s virtual private cloud. They are the only access points for designated Devops members to run privileged commnds that affect the entire platform. No other privileged remote access is available to the information system.
+    SC-7:
+      implementation_status: null
+      narrative:
+        a: |
+          AWS Boundary Protection - Secure Network Architecture
+          18F utilizes the AWS provided virtual network devices, including firewall and other boundary devices, in place to monitor and control communications at the external boundary of the network and at key internal boundaries within the network. These boundary devices employ rule sets, access control lists (ACL), and configurations to enforce the flow of information to specific information system services.
+          ACLs, or traffic flow policies, are established on each managed interface, which manage and enforce the flow of traffic.
+          18F connects to an AWS access point via HTTP or HTTPS using Secure Sockets Layer (SSL), a cryptographic protocol that is designed to protect against eavesdropping, tampering, and message forgery.
+          18F utilizes the AWS Virtual Private Cloud (VPC), which provides a private subnet within the AWS cloud. Each VPC is configured to utilize Routing Rules, Subnet Rules, and Security Group Rules.  Each of these controls must have appropriate rules and routes in-place before any external service is able to reach a host within AWS.
+        b: |
+          Each VPC is configured to utilize Routing Tables, and Security Groups.  Each of these controls must have appropriate rules and routes in-place before any external service is able to reach a host within Cloud Foundry.
+        c: |
+          The Cloud.gov system is internal to the 18F Virtual Private Cloud (VPC) and does not connect to external networks or information systems outside the 18F Virtual Private Cloud (VPC).
