--- a/data/components/CloudFoundry/ApplicationSecurityGroups/component.yaml
+++ b/data/components/CloudFoundry/ApplicationSecurityGroups/component.yaml
@@ -55,17 +55,4 @@ satisfies:
       narrative:
         a: |
           Cloud Foundry recommends that the use of Cloud Foundry ASGs to specify egress access rules for your applications. This functionality enables secure restricted application outbound traffic to predefined routes.
-
-verifications:
-  ASG_LIST:
-    last_run: 2016-01-26 10:41:36.009750
-    name: Access Control Flow View Application Security Groups
-    test_path: 'Feature: Access Control Flow Scenario: View Application Security Groups'
-    test_passed: true
-    type: TEST
-  ASG_OPEN_AND_CLOSED:
-    last_run: 2016-01-26 10:41:38.391335
-    name: Access Control Flow all
-    test_path: 'Feature: Access Control Flow Scenario: all'
-    test_passed: true
-    type: TEST
+verifications: {}
