--- a/data/components/18F/AU-Policy/component.yaml
+++ b/data/components/18F/AU-Policy/component.yaml
@@ -36,6 +36,31 @@ satisfies:
     references:
       - verification: POLICY_DOC
 
+    AU-3:
+      implementation_status: null
+      narrative: |
+        The Cloud.Gov platform as a service generates audit logs from its Loggregator componement and is passed through the ELK stack to produce audit records which contain sufficient information to establish at a minumum:
+          what type of event occured,
+          when (date and time the event occurance)
+          the source of the event
+          the outcome (success or failure) of the event
+          the identity of any user/subject associated with the event 
+     references:
+       - verification:
+
+    AU-3 (1):
+      implementation_status: null
+      narrative: |
+
+
+    AU-4:
+      implementation_status: null
+      narrative:
+
+    AU-5:
+      implementation_status: null
+      narrative:
+
     AU-6:
       implementation_status: null
       narrative:
@@ -78,7 +103,40 @@ satisfies:
 
       references:
         - verification: POLICY_DOC
+
+    AU-7:
+      implementation_status: null
+      narrative:
+
+    AU-7 (1):
+      implementation_status: null
+      narrative:
+
+    AU-8:
+      implementation_status: null
+      narrative:
+
+    AU-8 (1):
+      implementation_status: null
+      narrative:
+
     AU-9:
       implementation_status: null
       narrative: |
-        Audit logs are stored and  protected in a specified S3 bucket for Cloud.Gov that is limited to access by security staff will ensure the logs cannot be modified without proper authorization.
+        Audit logs are stored and protected in a specified S3 bucket for Cloud.Gov that is limited to access by security staff will ensure the logs cannot be modified without proper authorization.
+
+    AU-9(2):
+      implementation_status: null
+      narrative:
+
+    AU-9(4):
+      implementation_status: null
+      narrative:
+
+    AU-11:
+      implementation_status: null
+      narrative:
+
+    AU-12:
+      implementation_status: null
+      narrative:
