--- a/manifest.yaml
+++ b/manifest.yaml
@@ -3,5 +3,6 @@ applications:
   memory: 64M
   buildpack: https://github.com/cloudfoundry/staticfile-buildpack.git
   directory: visible
+  root: _book/
   env:
     FORCE_HTTPS: true
