--- a/data/components/18F/PE-Policy/component.yaml
+++ b/data/components/18F/PE-Policy/component.yaml
@@ -1,5 +1,10 @@
 documentation_complete: false
 name: Physical and Environmental Protection Policy for 18F
+verifications:
+  POLICY_DOC:
+    name: Policy Document
+    type: URL
+    path: https://github.com/18F/compliance-docs/blob/master/PE-Policy.md
 satisfies:
   NIST-800-53:
     PE-1:
