making narrative corrections for components so that the FedRAMP low and high work

--- a/data/components/18F/AT-Policy/component.yaml
+++ b/data/components/18F/AT-Policy/component.yaml
@@ -16,20 +16,22 @@ satisfies:
           The 18F Security Awareness policy which  addresses purpose, scope, roles, responsibilities, management commitment, coordination among organizational entities, and compliance and procedures to facilitate the implementation of the security awareness access and training policy and associated security awareness controls. The 18F accecss control policy is listed within its private Github repository that is accessible to all 18F staff.
         b: |
           The 18F Program Office will review and update the current 18F Security Awareness and training control policy at least every 3 years and any documented access  procedures at least annually.
+
       references:
         - verification: POLICY_DOC
     AT-2:
       implementation_status: null
-      narrative:
+      narrative: The 18F Program office reviews AT-2
       references:
         - verification: POLICY_DOC
     AT-2 (2):
       implementation_status: null
+      narrative: The 18F Program office reviews AT-2
       references:
         - verification: POLICY_DOC
     AT-3:
       implementation_status: null
-      narrative:
+      narrative: The 18F Program office reviews AT-2
       references:
         - verification: POLICY_DOC
     AT-4:
@@ -37,4 +39,3 @@ satisfies:
       narrative: Completed the development of the Awareness training policy specifically for 18F program. ISSO support is looking into possible solutions for specific security awareness training for 18F staff. currently reviewing the SEI training programs for Secure DevOps and Online line Learning management system.
       references:
         - verification: POLICY_DOC
-system: 18F
