--- a/data/components/18F/MP-Policy/component.yaml
+++ b/data/components/18F/MP-Policy/component.yaml
@@ -1,13 +1,15 @@
 documentation_complete: false
 name: Media Protection Policy for 18F
-verifications:
-  POLICY_DOC:
-    name: Policy Document
-    type: URL
-    path: https://github.com/18F/compliance-docs/blob/master/MP-Policy.md
 satisfies:
-  NIST-800-53:
-    MP-1:
-      implementation_status: null
-      narrative: 18F Policy
+- control_key: MP-1
+  covered_by: []
+  implementation_status: null
+  narrative: 18F Policy
+  standard_key: NIST-800-53
+schema_version: 2.0
 system: 18F
+verifications:
+- key: POLICY_DOC
+  name: Policy Document
+  path: https://github.com/18F/compliance-docs/blob/master/MP-Policy.md
+  type: URL
