--- a/data/components/AWS/S3/component.yaml
+++ b/data/components/AWS/S3/component.yaml
@@ -1,8 +1,13 @@
 documentation_complete: false
 name: S3
 satisfies:
-  NIST-800-53:
-    AU-4:
-      implementation_status: null
-      narrative: |
-        Administrators can define the amount of storage dedicated to audit record storage on their instances. Using S3 bucket will ensure storage of audit events will never be exceeded.
+- control_key: AU-4
+  covered_by: []
+  implementation_status: null
+  narrative: 'Administrators can define the amount of storage dedicated to audit record
+    storage on their instances. Using S3 bucket will ensure storage of audit events
+    will never be exceeded.
+
+    '
+  standard_key: NIST-800-53
+schema_version: 2.0
