--- a/data/components/CloudFoundry/DEA/component.yaml
+++ b/data/components/CloudFoundry/DEA/component.yaml
@@ -1,15 +1,31 @@
 documentation_complete: false
 name: DEA
 satisfies:
-  NIST-800-53:
-    AC-4 (21):
-      implementation_status: null
-      narrative: |
-        The DEA manages the Warder Containers and controls both outbound and inbound network rules
-    SC-7:
-      implementation_status: null
-      narrative:
-        a: |
-          Cloud Foundry Boundary Protection
-          Cloud Foundry implements network traffic rules using Linux iptables on the component VMs. Operators can configure rules to prevent system access from external networks and between internal components, and to restrict applications from establishing connections over the DEA network interface.
-          Spoofing- If an IP, MAC, or ARP spoofing attack bypasses the physical firewall for the deployment, Cloud Foundry network traffic rules help prevent the attack from accessing application containers. Cloud Foundry uses application isolation, operating system restrictions, and encrypted connections to further mitigate risk.
+- control_key: AC-4 (21)
+  covered_by: []
+  implementation_status: null
+  narrative: 'The DEA manages the Warder Containers and controls both outbound and
+    inbound network rules
+
+    '
+  standard_key: NIST-800-53
+- control_key: SC-7
+  covered_by: []
+  implementation_status: null
+  narrative:
+    a: 'Cloud Foundry Boundary Protection
+
+      Cloud Foundry implements network traffic rules using Linux iptables on the component
+      VMs. Operators can configure rules to prevent system access from external networks
+      and between internal components, and to restrict applications from establishing
+      connections over the DEA network interface.
+
+      Spoofing- If an IP, MAC, or ARP spoofing attack bypasses the physical firewall
+      for the deployment, Cloud Foundry network traffic rules help prevent the attack
+      from accessing application containers. Cloud Foundry uses application isolation,
+      operating system restrictions, and encrypted connections to further mitigate
+      risk.
+
+      '
+  standard_key: NIST-800-53
+schema_version: 2.0
