--- a/data/components/CloudFoundry/Warden/component.yaml
+++ b/data/components/CloudFoundry/Warden/component.yaml
@@ -1,9 +1,16 @@
-name: Warden
 documentation_complete: false
+name: Warden
 satisfies:
-  NIST-800-53:
-    AC-4 (21):
-      implementation_status: null
-      narrative: |
-        Warden ALLOW rules: Any Warden Server configuration `allow` rules. Set Warden Server configuration rules in the Droplet Execution Agent (DEA) configuration section of your deployment manifest.
-        Warden DENY rules: Any Warden Server configuration `deny` rules. Set Warden Server configuration rules in the DEA configuration section of your deployment manifest.
+- control_key: AC-4 (21)
+  covered_by: []
+  implementation_status: null
+  narrative: 'Warden ALLOW rules: Any Warden Server configuration `allow` rules. Set
+    Warden Server configuration rules in the Droplet Execution Agent (DEA) configuration
+    section of your deployment manifest.
+
+    Warden DENY rules: Any Warden Server configuration `deny` rules. Set Warden Server
+    configuration rules in the DEA configuration section of your deployment manifest.
+
+    '
+  standard_key: NIST-800-53
+schema_version: 2.0
